feat: homepage (not finish)

--- a/index.html
+++ b/index.html
@@ -1,1 +1,217 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
+
+    <title>L' Atelier</title>
+
+</head>
+
+<body>
+
+    <!-- Header -->
+    <header>
+        <img src="image/atelier-logo.svg" alt="Logo Atelier">
+        <div id="bar"></div>
+    </header>
+
+    <!-- Section images -->
+    <img class="picture" src="fonds-de-commerce-pano-salon-coiffure-5-.png" alt="Photo intérieur de l'Atelier">
+
+    <!-- Prices -->
+    <div>
+        <h1>Prix</h1>
+        <div class="choices">
+            <button id="women">Femme</button>
+            <button id="men">Homme</button>
+        </div>
+
+        <div class="women-price">
+
+            <div class="line">
+                <p id="name">Coupe - Brushing</p>
+                <p id="price">41 € / 44 € / 49 €</p>
+            </div>
+            <div id="little-bar"></div>
+
+            <div class="line">
+                <p id="name">Shampooing - Brushing</p>
+                <p id="price">22 € / 24 € / 29 € / 34 €</p>
+            </div>
+            <div id="little-bar"></div>
+
+            <div class="line">
+                <p id="name">Soin</p>
+                <p id="price">6 € / 10 €</p>
+            </div>
+            <div id="little-bar"></div>
+
+            <div class="line">
+                <p id="name">Mousse</p>
+                <p id="price">6 €</p>
+            </div>
+            <div id="little-bar"></div>
+
+            <div class="line">
+                <p id="name">Couleur</p>
+                <p id="price">38 €</p>
+            </div>
+            <div id="little-bar"></div>
+
+            <div class="line">
+                <p id="name">Couleur sans ammoniaque</p>
+                <p id="price">43 €</p>
+            </div>
+            <div id="little-bar"></div>
+
+            <div class="line">
+                <p id="name">Shampooing - Américain</p>
+                <p id="price">38 €</p>
+            </div>
+            <div id="little-bar"></div>
+
+            <div class="line">
+                <p id="name">Couleur Semi - Permanente</p>
+                <p id="price">33 €</p>
+            </div>
+            <div id="little-bar"></div>
+
+            <div class="line">
+                <p id="name">Dose supplémenaire</p>
+                <p id="price">10 €</p>
+            </div>
+
+            <br>
+
+            <div class="line">
+                <p id="name">Flash</p>
+                <p id="price">19 € / 29 €</p>
+            </div>
+            <br>
+
+            <br>
+
+            <div class="line">
+                <p id="name">Décoloration Cheveux court</p>
+                <p id="price">58 €</p>
+            </div>
+            <div id="little-bar"></div>
+
+            <div class="line">
+                <p id="name">Décapage</p>
+                <p id="price">33 €</p>
+            </div>
+            <div id="little-bar"></div>
+
+            <div class="line">
+                <p id="name">Balayage</p>
+                <p id="price">48 € / 62 € / 72 €</p>
+            </div>
+
+            <br>
+
+            <div class="line">
+                <p id="name">Forfait - Permanente</p>
+                <p id="price">78 € / 89 €</p>
+            </div>
+            <p id="info">(Shampooing, Coupe, Permanente, avec ou sans ammoniaque, Brush)</p>
+            <div id="little-bar"></div>
+
+            <div class="line">
+                <p id="name">Coupe Adolescente -18 ans</p>
+                <p id="price">38 €</p>
+            </div>
+            <p id="info">(Cheveux courts)</p>
+            <div id="little-bar"></div>
+
+            <div class="line">
+                <p id="name">Coupe Enfant -10 ans</p>
+                <p id="price">19 €</p>
+            </div>
+            <p id="info">(Cheveux longs sur devis)</p>
+        </div>
+    </div>
+
+    <!-- Products -->
+    <div>
+        <h1>Produits</h1>
+        <div class="products">
+
+            <div class="product">
+                <img id="product-image" src="image/produit2.webp" alt="Produit">
+                <div class="line">
+                    <p id="name">L'Oréal</p>
+                    <p id="price">24 €</p>
+                </div>
+                <p id="info">Rénovateur de longueurs</p>
+                <p id="info">Pour cheveux longs</p>
+            </div>
+
+            <div class="product">
+                <img id="product-image" src="image/produit1.webp" alt="Produit">
+                <div class="line">
+                    <p id="name">L'Oréal</p>
+                    <p id="price">20 €</p>
+                </div>
+                <p id="info">Restructurant instantané</p>
+                <p id="info">Pour cheveux secs et abimés</p>
+            </div>
+
+            <div class="product">
+                <img id="product-image" src="image/produit3.webp" alt="Produit">
+                <div class="line">
+                    <p id="name">L'Oréal</p>
+                    <p id="price">27 €</p>
+                </div>
+                <p id="info">Neutralisateur anti-jaunissement</p>
+                <p id="info">Pour cheveux blonds ou méchés</p>
+            </div>
+        </div>
+        <div class="button-show-more">
+            <button id="show-more">Voir plus de produits</button>
+        </div>
+    </div>
+
+    <!-- Avis -->
+    <div>
+        <div class="avis">
+            <h2>Name</h2>
+            <img id="star" src="image/star.svg">
+            <img src="image/star.svg">
+            <img src="image/star.svg">
+            <img src="image/star.svg">
+            <img src="image/star.svg">
+        </div>
+        <p class="comment"><span>“ </span> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint tempora ut libero neque facere similique magnam blanditiis vel reprehenderit, beatae ullam laborum iure? Deleniti aliquid quisquam iste, illum similique aperiam dolor
+            sit amet eum.<span> “</span></p>
+        <p class="date">Date</p>
+    </div>
+
+
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+
+
+</body>
+
+</html>
