fix: some misstake

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -8,8 +8,7 @@
     <link href="style.css" rel="stylesheet">
     <script src="script.js" defer="">
     </script>
-    <title>L' Atelier</title>
-
+    <title>L' Atelier 12</title>
 </head>
 
 <body>
@@ -240,7 +239,7 @@
             </div>
         </div>
         <div class="button-show-more">
-            <button id="show-more">Voir plus de produits</button>
+            <a id="show-more" href="products.html">Voir plus de produits</a>
         </div>
     </div>
 
