--- a/products.html
+++ b/products.html
@@ -6,10 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>L' Atelier 12</title>
+    <link href="style.css" rel="stylesheet">
+    <script src="script.js" defer="">
+    </script>
 </head>
 
 <body>
-    <p>Hello</p>
+    <!-- Header -->
+    <header>
+        <a href='index.html'><img src="image/atelier-logo.svg" alt="Logo Atelier"></a>
+        <div id="bar-header"></div>
+    </header>
 </body>
 
 </html>
