feat: clear carousel section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="style.css" rel="stylesheet">
     <script src="script.js" defer="">
     </script>
-    <title>L' Atelier 12</title>
+    <title>L'Atelier 12</title>
 </head>
 
 <body>
@@ -255,20 +255,17 @@
                 <img src="image/star.svg">
                 <img src="image/star.svg">
             </div>
-            <!-- <div class="box-comment"> -->
             <p class="comment"> <span>“ </span> Très bonne expérience dans ce salon où je suis allée pour la première fois. La coiffeuse a su écouter mes deman-des, me conseiller et me faire une coupe adaptée à ma nature de cheveux et envies. Personne très professionnelle.
                 Un salon dans lequel j’ai envie de retourner. <span> “</span>
             </p>
-
-            <!-- </div> -->
-            <!-- <p class="date">Octobre 2020</p> -->
+            
         </div>
         <div class="carousel">
-            <button class="carousel-button" id="b1" onclick="commentNumber1()"></button>
-            <button class="carousel-button" id="b2" onclick="commentNumber2()"></button>
-            <button class="carousel-button" id="b3" onclick="commentNumber3()"></button>
-            <button class="carousel-button" id="b4" onclick="commentNumber4()"></button>
-            <button class="carousel-button" id="b5" onclick="commentNumber5()"></button>
+            <button class="carousel-button" id="button-1" onclick="getComment(1)"></button>
+            <button class="carousel-button" id="button-2" onclick="getComment(2)"></button>
+            <button class="carousel-button" id="button-3" onclick="getComment(3)"></button>
+            <button class="carousel-button" id="button-4" onclick="getComment(4)"></button>
+            <button class="carousel-button" id="button-5" onclick="getComment(5)"></button>
         </div>
 
     </div>
