feat: automatic carousel + temporary photo

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </header>
 
     <!-- Section images -->
-    <!-- <img class="picture" alt="Photo intérieur de l'Atelier"> -->
-    <div class="picture"></div>
+    <img class="picture" src="image/test.png" alt="Photo intérieur de l'Atelier">
+    <!-- <div class="picture"></div> -->
 
     <!-- Prices -->
     <div>
@@ -247,15 +247,14 @@
         <h1>Avis</h1>
         <div class="block">
             <div class="avis">
-                <h3 class="name">Margot Lambard</h3>
+                <h3 class="name"></h3>
                 <img id="star" src="image/star.svg">
                 <img src="image/star.svg">
                 <img src="image/star.svg">
                 <img src="image/star.svg">
                 <img src="image/star.svg">
             </div>
-            <p class="comment"> <span>“ </span> Très bonne expérience dans ce salon où je suis allée pour la première fois. La coiffeuse a su écouter mes deman-des, me conseiller et me faire une coupe adaptée à ma nature de cheveux et envies. Personne très professionnelle.
-                Un salon dans lequel j’ai envie de retourner. <span> “</span>
+            <p class="comment"> <span>“ </span><span> “</span>
             </p>
             
         </div>
