feat: products & folder organisation

--- a/html/index.html
+++ b/html/index.html
@@ -5,23 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet">
-    <script src="script.js" defer="">
+    <link href="/css/index.css" rel="stylesheet">
+    <link href="/css/global.css" rel="stylesheet">
+    <script src="/js/index.js" defer="">
     </script>
     <title>L'Atelier 12</title>
 </head>
 
 <body>
-
     <!-- Header -->
     <header>
-        <img src="image/atelier-logo.svg" alt="Logo Atelier">
+        <img src="/image/atelier-logo.svg" alt="Logo Atelier">
 
         <div id="bar-header"></div>
     </header>
 
     <!-- Section images -->
-    <img class="picture" src="image/test.png" alt="Photo intérieur de l'Atelier">
+    <img class="picture" src="/image/test.png" alt="Photo intérieur de l'Atelier">
     <!-- <div class="picture"></div> -->
 
     <!-- Prices -->
@@ -194,12 +194,7 @@
                 <p id="price">66 €</p>
             </div>
             <p id="info">(Shampooing, Coupe, Permanente, Coiffage)</p>
-
-
-
         </div>
-
-
     </div>
 
     <!-- Products -->
@@ -208,7 +203,7 @@
         <div class="products">
 
             <div class="product">
-                <img id="product-image" src="image/produit2.webp" alt="Produit">
+                <img id="product-image" src="/image/products/produit2.webp" alt="Produit">
                 <div class="line-product">
                     <p id="name">L'Oréal</p>
                     <p id="price">24 €</p>
@@ -218,7 +213,7 @@
             </div>
 
             <div class="product">
-                <img id="product-image" src="image/produit1.webp" alt="Produit">
+                <img id="product-image" src="/image/products/produit1.webp" alt="Produit">
                 <div class="line-product">
                     <p id="name">L'Oréal</p>
                     <p id="price">20 €</p>
@@ -228,7 +223,7 @@
             </div>
 
             <div class="product">
-                <img id="product-image" src="image/produit3.webp" alt="Produit">
+                <img id="product-image" src="/image/products/produit3.webp" alt="Produit">
                 <div class="line-product">
                     <p id="name">L'Oréal</p>
                     <p id="price">27 €</p>
@@ -238,7 +233,7 @@
             </div>
         </div>
         <div class="button-show-more">
-            <a id="show-more" href="products.html">Voir plus de produits</a>
+            <a id="show-more" href="/html/products.html">Voir plus de produits</a>
         </div>
     </div>
 
@@ -248,11 +243,11 @@
         <div class="block">
             <div class="avis">
                 <h3 class="name"></h3>
-                <img id="star" src="image/star.svg">
-                <img src="image/star.svg">
-                <img src="image/star.svg">
-                <img src="image/star.svg">
-                <img src="image/star.svg">
+                <img id="star" src="/image/icon/star.svg">
+                <img src="/image/icon/star.svg">
+                <img src="/image/icon/star.svg">
+                <img src="/image/icon/star.svg">
+                <img src="/image/icon/star.svg">
             </div>
             <p class="comment"> <span>“ </span><span> “</span>
             </p>
@@ -308,7 +303,6 @@
                 <p id="hour">Fermé</p>
             </div>
 
-
         </div>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2625.987815123511!2d2.3546398156395627!3d48.83937110999971!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e671f24beb256d%3A0x61c4fe50e85514fc!2s12%20Rue%20Geoffroy-Saint-Hilaire%2C%2075005%20Paris!5e0!3m2!1sfr!2sfr!4v1649702513626!5m2!1sfr!2sfr"
             width="700" height="371" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -317,22 +311,17 @@
     <!-- Footer -->
     <footer>
         <div id="bar-footer"></div>
-
         <div class="informations">
             <div class="contact">
-                <img id="icon-footer" src="image/tel.svg" alt="icon tel">
+                <img id="icon-footer" src="/image/icon/tel.svg" alt="icon tel">
                 <a id="num" href="tel:01.47.07.59.28">01.47.07.59.28</a>
             </div>
             <div class="adress">
-                <img id="icon-footer" src="image/ping.svg" alt="icon ping">
+                <img id="icon-footer" src="/image/icon/ping.svg" alt="icon ping">
                 <a id="adress" href="https://www.google.com/maps/place/12+Rue+Geoffroy-Saint-Hilaire,+75005+Paris/@48.8393676,2.3546398,17z/data=!3m1!4b1!4m5!3m4!1s0x47e671f24beb256d:0x61c4fe50e85514fc!8m2!3d48.8393676!4d2.3568285" target="blank">12 rue Geoffroy-Saint-Hilaire 75005</a>
             </div>
         </div>
-
     </footer>
-
-
-
 </body>
 
 </html>
