--- a/html/index.html
+++ b/html/index.html
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/css/index.css" rel="stylesheet">
     <link href="/css/global.css" rel="stylesheet">
-    <script src="/js/index.js" defer="">
-    </script>
     <title>L'Atelier 12</title>
 </head>
 
@@ -323,5 +321,6 @@
         </div>
     </footer>
 </body>
+<script src="/js/index.js"></script>
 
 </html>
