fix: online bug

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             </div>
         </div>
         <div class="button-show-more">
-            <a id="show-more" href="/html/products.html">Voir plus de produits</a>
+            <a id="show-more" href="products.html">Voir plus de produits</a>
         </div>
     </div>
 
