--- a/products.html
+++ b/products.html
@@ -13,7 +13,7 @@
 <body>
     <!-- Header -->
     <header>
-        <a href='/html/index.html'><img src="/image/atelier-logo.svg" alt="Logo Atelier"></a>
+        <a href='index.html'><img src="/image/atelier-logo.svg" alt="Logo Atelier"></a>
         <div id="bar-header"></div>
     </header>
 
