--- a/products.html
+++ b/products.html
@@ -18,31 +18,37 @@
     </header>
 
     <!-- Filters -->
-    <div class="filters">
+    <section class="filters">
 
         <details class="category">
             <summary>Catégories<span></span></summary>
-            <li>Shampoings</li>
-            <li>Produits Coiffants</li>
-            <li>Soins</li>
+            <ul> 
+                <li>Shampoings</li>
+                <li>Produits Coiffants</li>
+                <li>Soins</li>
+            </ul>
         </details>
 
         <details class="brand">
             <summary>Marques<span></span></summary>
+            <ul>
                 <li>L'Oréal</li>
                 <li>Coca</li>
                 <li>Louis Vuitton</li>
                 <li>Zara</li>
+            </ul>
         </details>
 
 
         <details class="price">
             <summary>Prix<span></span></summary>
+            <ul>
                 <li>Prix le plus bas</li>
                 <li>Prix la plus élevé</li>
+            </ul>
         </details>
 
-    </div>
+    </section>
 
 
 
