feat: filter bar with hover/animation

--- a/products.html
+++ b/products.html
@@ -19,35 +19,33 @@
 
     <!-- Filters -->
     <section class="filters">
-
-        <details class="category">
-            <summary>Catégories<span></span></summary>
-            <ul> 
+        
+        <div class="menu"> 
+            <h1>Catégories<span></span></h1>
+            <ul>
                 <li>Shampoings</li>
                 <li>Produits Coiffants</li>
                 <li>Soins</li>
             </ul>
-        </details>
+        </div>
 
-        <details class="brand">
-            <summary>Marques<span></span></summary>
+        <div class="menu"> 
+            <h1>Marques<span></span></h1>
             <ul>
                 <li>L'Oréal</li>
                 <li>Coca</li>
                 <li>Louis Vuitton</li>
                 <li>Zara</li>
             </ul>
-        </details>
+        </div>
 
-
-        <details class="price">
-            <summary>Prix<span></span></summary>
+        <div class="menu"> 
+            <h1>Prix<span></span></h1>
             <ul>
                 <li>Prix le plus bas</li>
-                <li>Prix la plus élevé</li>
+                <li>Prix le plus élevé</li>
             </ul>
-        </details>
-
+        </div>
     </section>
 
 
