feat: filter bar

--- a/products.html
+++ b/products.html
@@ -19,9 +19,8 @@
 
     <!-- Filters -->
     <section class="filters">
-        
         <div class="menu"> 
-            <h1>Catégories<span></span></h1>
+            <h3>Catégories<span></span></h3>
             <ul>
                 <li>Shampoings</li>
                 <li>Produits Coiffants</li>
@@ -30,17 +29,16 @@
         </div>
 
         <div class="menu"> 
-            <h1>Marques<span></span></h1>
+            <h3>Marques<span></span></h3>
             <ul>
                 <li>L'Oréal</li>
-                <li>Coca</li>
-                <li>Louis Vuitton</li>
-                <li>Zara</li>
+                <li>Sublimo</li>
+                <li>Mulato</li>
             </ul>
         </div>
 
         <div class="menu"> 
-            <h1>Prix<span></span></h1>
+            <h3>Prix<span></span></h3>
             <ul>
                 <li>Prix le plus bas</li>
                 <li>Prix le plus élevé</li>
@@ -48,7 +46,89 @@
         </div>
     </section>
 
+    <!-- Products -->
+    <section class="products">
 
+        <div class="product">
+            <img id="product-image" src="/image/products/produit1.webp" alt="Produit">
+            <div class="line-product">
+                <p id="name">L'Oréal</p>
+                <p id="price">24 €</p>
+            </div>
+            <p id="info">Rénovateur de longueurs</p>
+            <p id="info">Pour cheveux longs</p>
+        </div>
+
+        <div class="product">
+            <img id="product-image" src="/image/products/produit2.webp" alt="Produit">
+            <div class="line-product">
+                <p id="name">L'Oréal</p>
+                <p id="price">24 €</p>
+            </div>
+            <p id="info">Rénovateur de longueurs</p>
+            <p id="info">Pour cheveux longs</p>
+        </div>
+
+        <div class="product">
+            <img id="product-image" src="/image/products/produit3.webp" alt="Produit">
+            <div class="line-product">
+                <p id="name">L'Oréal</p>
+                <p id="price">24 €</p>
+            </div>
+            <p id="info">Rénovateur de longueurs</p>
+            <p id="info">Pour cheveux longs</p>
+        </div>
+
+        <div class="product">
+            <img id="product-image" src="/image/products/produit2.webp" alt="Produit">
+            <div class="line-product">
+                <p id="name">L'Oréal</p>
+                <p id="price">24 €</p>
+            </div>
+            <p id="info">Rénovateur de longueurs</p>
+            <p id="info">Pour cheveux longs</p>
+        </div>
+
+        <div class="product">
+            <img id="product-image" src="/image/products/produit1.webp" alt="Produit">
+            <div class="line-product">
+                <p id="name">L'Oréal</p>
+                <p id="price">24 €</p>
+            </div>
+            <p id="info">Rénovateur de longueurs</p>
+            <p id="info">Pour cheveux longs</p>
+        </div>
+
+        <div class="product">
+            <img id="product-image" src="/image/products/produit3.webp" alt="Produit">
+            <div class="line-product">
+                <p id="name">L'Oréal</p>
+                <p id="price">24 €</p>
+            </div>
+            <p id="info">Rénovateur de longueurs</p>
+            <p id="info">Pour cheveux longs</p>
+        </div>
+
+        <div class="product">
+            <img id="product-image" src="/image/products/produit1.webp" alt="Produit">
+            <div class="line-product">
+                <p id="name">L'Oréal</p>
+                <p id="price">24 €</p>
+            </div>
+            <p id="info">Rénovateur de longueurs</p>
+            <p id="info">Pour cheveux longs</p>
+        </div>
+
+        <div class="product">
+            <img id="product-image" src="/image/products/produit2.webp" alt="Produit">
+            <div class="line-product">
+                <p id="name">L'Oréal</p>
+                <p id="price">24 €</p>
+            </div>
+            <p id="info">Rénovateur de longueurs</p>
+            <p id="info">Pour cheveux longs</p>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer>
