--- a/products.html
+++ b/products.html
@@ -49,85 +49,17 @@
     <!-- Products -->
     <section class="products">
 
-        <div class="product">
-            <img id="product-image" src="/image/products/produit1.webp" alt="Produit">
-            <div class="line-product">
-                <p id="name">L'Oréal</p>
-                <p id="price">24 €</p>
+        <template id="product">
+            <div class="product">
+                <img id="product-image" src="/image/products/produit1.webp" alt="Produit">
+                <div class="line-product">
+                    <p id="name"></p>
+                    <p id="price"></p>
+                </div>
+                <p class="info" id="describe1"></p>
+                <p class="info" id="describe2"></p>
             </div>
-            <p id="info">Rénovateur de longueurs</p>
-            <p id="info">Pour cheveux longs</p>
-        </div>
-
-        <div class="product">
-            <img id="product-image" src="/image/products/produit2.webp" alt="Produit">
-            <div class="line-product">
-                <p id="name">L'Oréal</p>
-                <p id="price">24 €</p>
-            </div>
-            <p id="info">Rénovateur de longueurs</p>
-            <p id="info">Pour cheveux longs</p>
-        </div>
-
-        <div class="product">
-            <img id="product-image" src="/image/products/produit3.webp" alt="Produit">
-            <div class="line-product">
-                <p id="name">L'Oréal</p>
-                <p id="price">24 €</p>
-            </div>
-            <p id="info">Rénovateur de longueurs</p>
-            <p id="info">Pour cheveux longs</p>
-        </div>
-
-        <div class="product">
-            <img id="product-image" src="/image/products/produit2.webp" alt="Produit">
-            <div class="line-product">
-                <p id="name">L'Oréal</p>
-                <p id="price">24 €</p>
-            </div>
-            <p id="info">Rénovateur de longueurs</p>
-            <p id="info">Pour cheveux longs</p>
-        </div>
-
-        <div class="product">
-            <img id="product-image" src="/image/products/produit1.webp" alt="Produit">
-            <div class="line-product">
-                <p id="name">L'Oréal</p>
-                <p id="price">24 €</p>
-            </div>
-            <p id="info">Rénovateur de longueurs</p>
-            <p id="info">Pour cheveux longs</p>
-        </div>
-
-        <div class="product">
-            <img id="product-image" src="/image/products/produit3.webp" alt="Produit">
-            <div class="line-product">
-                <p id="name">L'Oréal</p>
-                <p id="price">24 €</p>
-            </div>
-            <p id="info">Rénovateur de longueurs</p>
-            <p id="info">Pour cheveux longs</p>
-        </div>
-
-        <div class="product">
-            <img id="product-image" src="/image/products/produit1.webp" alt="Produit">
-            <div class="line-product">
-                <p id="name">L'Oréal</p>
-                <p id="price">24 €</p>
-            </div>
-            <p id="info">Rénovateur de longueurs</p>
-            <p id="info">Pour cheveux longs</p>
-        </div>
-
-        <div class="product">
-            <img id="product-image" src="/image/products/produit2.webp" alt="Produit">
-            <div class="line-product">
-                <p id="name">L'Oréal</p>
-                <p id="price">24 €</p>
-            </div>
-            <p id="info">Rénovateur de longueurs</p>
-            <p id="info">Pour cheveux longs</p>
-        </div>
+        </template>
     </section>
 
     <!-- Footer -->
