--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
                     <p id="name">L'Oréal</p>
                     <p id="price">24 €</p>
                 </div>
-                <p id="info">Rénovateur de longueurs</p>
-                <p id="info">Pour cheveux longs</p>
+                <p class="info" id="describe1">Rénovateur de longueurs</p>
+                <p class="info" id="describe2">Pour cheveux longs</p>
             </div>
 
             <div class="product">
@@ -215,8 +215,8 @@
                     <p id="name">L'Oréal</p>
                     <p id="price">20 €</p>
                 </div>
-                <p id="info">Restructurant instantané</p>
-                <p id="info">Pour cheveux secs et abimés</p>
+                <p class="info" id="describe1">Restructurant instantané</p>
+                <p class="info" id="describe2">Pour cheveux secs et abimés</p>
             </div>
 
             <div class="product">
@@ -225,8 +225,8 @@
                     <p id="name">L'Oréal</p>
                     <p id="price">27 €</p>
                 </div>
-                <p id="info">Neutralisateur anti-jaunissement</p>
-                <p id="info">Pour cheveux blonds ou méchés</p>
+                <p class="info" id="describe1">Neutralisateur anti-jaunissement</p>
+                <p class="info" id="describe2">Pour cheveux blonds ou méchés</p>
             </div>
         </div>
         <div class="button-show-more">
