fix: url strapi

--- a/products.html
+++ b/products.html
@@ -29,15 +29,6 @@
         </div>
 
         <div class="menu"> 
-            <h3>Marques<span></span></h3>
-            <ul>
-                <li>L'Oréal</li>
-                <li>Sublimo</li>
-                <li>Mulato</li>
-            </ul>
-        </div>
-
-        <div class="menu"> 
             <h3>Prix<span></span></h3>
             <ul>
                 <li>Prix le plus bas</li>
@@ -51,7 +42,7 @@
 
         <template id="product">
             <div class="product">
-                <img id="product-image" src="/image/products/produit1.webp" alt="Produit">
+                <img id="product-image" src="" alt="Produit">
                 <div class="line-product">
                     <p id="name"></p>
                     <p id="price"></p>
